--- a/template.html
+++ b/template.html
@@ -105,7 +105,6 @@
       max-width: 80ch;
     }
     div[data-element="main"] {
-      overflow: auto;
       margin: 10px auto;
     }
     section.tire-and-car-information {
@@ -239,12 +238,12 @@
 <script>
   const tableMeansureData = [
     {
-      meansure: "[meansure]",
-      apply: "[apply]",
-      speedIndex: "[speedIndex]",
-      chargeIndex: "[chargeIndex]",
-      presion: "[presion]",
-      calibration: "[calibration]",
+      meansure: [meansure],
+      apply: [apply],
+      speedIndex: [speedIndex],
+      chargeIndex: [chargeIndex],
+      presion: [presion],
+      calibration: [calibration],
     },
   ];
 
